# webshell-detector

./: .env  .gitignore  Cargo.toml  diesel.toml
db/: data.db
src/: db.rs  engine.rs  entry.rs  lib.rs  main.rs  schema.rs  task.rs  utils.rs
