[package]
name = "webshell-detector"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = "1"
diesel = { version = "2.2.8", features = ["sqlite"] }
dotenvy = "0.15"
md5 = "0.7.0"
regex = "1.9.1"
hex = "0.4.3"
rusqlite = { version = "0.31", features = ["bundled"] }
log = "0.4"
clap = { version = "3.0", features = ["derive"] }
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing = "0.1"
chrono = "0.4"
dashmap = "6"